--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>xxxxxx</title>
+	<title>The Shelf</title>
 	<!-- Bootstraps CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
@@ -18,7 +18,7 @@
 		<div class="container-fluid">
 			<div class="navbar-header">	
 				<!-- First part of the navigation bar -->
-			<a class="navbar-brand page-scroll" href="#page-top"> XXXXXXX</a>
+			<a class="navbar-brand page-scroll" href="#page-top"> The Shelf</a>
 			</div>
 			<div class="collapse navbar-collapse" id="">
 				<!-- Second part of the navigation bar with the navigation menu -->
@@ -54,10 +54,10 @@
 		<div class="">
 			<div class="">
 				<!-- here goes the main picture and the name -->
-				<center><img src="img/"></img></center>
-				<h1>XXXXXXX</h1>
+				<center><img src="img/jan.jpg"></img></center>
+				<h1>The shelf</h1>
 				<hr>
-				<p>xxxxxxx</p>
+				<p>Super awesome</p>
 			</div>
 		</div>
 
@@ -71,7 +71,12 @@
 					<!-- Here goes the content of the first section-->
 					<h2>Our Hack</h2>
 					<hr>
-					<p> xxxxxxxxxxx</p>
+					<center><i class="glyphicon glyphicon-cd"></i></center>
+					<br></br>
+					<p class="container-text">Nowadays we have everything figured out regarding audiovisual media reproduction and management. Or don't we?<br>
+					There are many options today for media management, but few offer the authentic experience of interacting physically with your collections. The "insert name here" shelf is an intuitive and efficient way to organize and play many different forms of media. Simply by placing a designated object on the "catchy name", music can be played through your existing home entertainment systems. This solution uses a seamlessly integrated rfid tagging system to link physical objects to your favorite music, movies, games, and more. Where the Internet of Things is often controlled using apps on mobile devices, the "name here" takes the user a step away from the technology and gives the interaction a satisfying, tangible feel.
+					</p>
+					<br></br>
 				</div>
 			</div>
 		</div>
@@ -86,7 +91,10 @@
 					<!-- Here goes the content of the second section-->
 					<h2>The Technology</h2>
 					<hr>
+					<center><i class="glyphicon glyphicon-wrench"></i></center>
+					<br></br>
 					<p> xxxxxxxxxxx</p>
+					
 				</div>
 			</div>
 		</div>
@@ -101,8 +109,17 @@
 					<!-- Here goes the content of the third section-->
 					<h2>Our Market</h2>
 					<hr>
-					<p> xxxxxxxxxxx</p>
-
+					<center><i class="glyphicon glyphicon-credit-card"></i></center>
+					<br></br>
+					<p class="container-text">This product is definitely not for Spotify or iTunes users. Our product is directed to people who like to keep a physical copy of the audiovisual materials they buy and collect. 
+					<br>
+					In the last years many on-line music and audiovisual stores closed their virtual doors snatching users from their digital copies after buying them. After these kind of situations some consumers have come back to buying hard copies.
+					<br>
+					The shelf is a hadware solution that allows audiovisual hard-copy owners to actively interact with their audiovisual media but reducing this interaction to a pleasent gesture. Collectors and fans will enjoy the pleasure of selecting whatever title they want to play from their home libraries and actively playing it.
+					</p>
+					<p class="container-text"> Let's talk about business. The shelf is presented as an input device for your audiovisual home center that can be easily added to any shelf. Basically we do not sell the shelf, we sell the device that is added to the shelf. Consumers would buy the product and easily install it at home. 
+					</p>
+					<br></br>
 				</div>
 			</div>
 		</div>
@@ -237,24 +254,32 @@
 				    <li data-target="#myCarousel" data-slide-to="1"></li>
 				    <li data-target="#myCarousel" data-slide-to="2"></li>
 				    <li data-target="#myCarousel" data-slide-to="3"></li>
+				    <li data-target="#myCarousel" data-slide-to="4"></li>
+				    <li data-target="#myCarousel" data-slide-to="5"></li>
 				  </ol>
 
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner" role="listbox">
 				    <div class="item active">
-				      <img src="img/raquel.jpg" alt="Chania">
+				      <img src="img/fun/1.jpg" alt="Hackathon">
 				    </div>
 
 				    <div class="item">
-				      <img src="img/raquel.jpg" alt="Chania">
+				      <img src="img/fun/2.jpg" alt="Hackathon">
 				    </div>
 
 				    <div class="item">
-				      <img src="img/raquel.jpg" alt="Flower">
+				      <img src="img/fun/3.jpg" alt="Hackathon">
 				    </div>
 
 				    <div class="item">
-				      <img src="img/raquel.jpg" alt="Flower">
+				      <img src="img/fun/4.jpg" alt="Hackathon">
+				    </div>
+				    <div class="item">
+				      <img src="img/fun/5.jpg" alt="Hackathon">
+				    </div>
+				    <div class="item">
+				      <img src="img/fun/6.jpg" alt="Hackathon">
 				    </div>
 				  </div>
 
