--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- End of head -->
 <!-- Body begins -->
 <body id="page-top">
-	<nav id="mainNav" class="navbar navba">
+	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">	
 				<!-- First part of the navigation bar -->
@@ -51,13 +51,14 @@
 
 <!-- begin of header -->
 	<header>
-		<div class="">
-			<div class="">
+		<div class="header-content">
+			<div class="header-content-inner">
 				<!-- here goes the main picture and the name -->
-				<center><img src="img/jan.jpg"></img></center>
+				<center><img src="" class="img-responsive"></img></center>
 				<h1>The shelf</h1>
 				<hr>
 				<p>Super awesome</p>
+				<a href="#our-hack" class="btn btn-primary btn-xl page-scroll">Let's get started!</a>
 			</div>
 		</div>
 
@@ -134,6 +135,7 @@
 					<!-- Here goes the content of the fourth section-->
 					<h2>Our Team</h2>
 					<hr>
+					<center><i class="glyphicon glyphicon-heart"></i></center>
 				</div>
 			</div>
 		</div>
@@ -244,6 +246,8 @@
 					<!-- Here goes the content of the firsr section-->
 					<h2>How we had fun</h2>
 					<hr>
+					<center><i class="glyphicon glyphicon-star"></i></center>
+					<br></br>
 					<p class="container-text"> Hackathons are really nice places to meet people, learn new stuff, try new technologies, troll, play minecraft, walk the pussy magnet, eat and drink for free and, of course, work on some amazing projects. These are some of the things we did just for fun while working on our project.<br><br> Cheers!</p>
 				</div>
 				<center>
