--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="css/creative.css" type="text/css">
+	<link rel="stylesheet" href="css/animate.min.css" type="text/css">
+	<!-- Custom Fonts -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
 
 </head>
 <!-- End of head -->
@@ -70,6 +75,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<!-- Here goes the content of the first section-->
+					<br></br>
 					<h2>Our Hack</h2>
 					<hr>
 					<center><i class="glyphicon glyphicon-cd"></i></center>
@@ -90,6 +96,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<!-- Here goes the content of the second section-->
+					<br></br>
 					<h2>The Technology</h2>
 					<hr>
 					<center><i class="glyphicon glyphicon-wrench"></i></center>
@@ -108,6 +115,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<!-- Here goes the content of the third section-->
+					<br></br>
 					<h2>Our Market</h2>
 					<hr>
 					<center><i class="glyphicon glyphicon-credit-card"></i></center>
@@ -133,6 +141,7 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<!-- Here goes the content of the fourth section-->
+					<br></br>
 					<h2>Our Team</h2>
 					<hr>
 					<center><i class="glyphicon glyphicon-heart"></i></center>
@@ -244,6 +253,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3 text-center">
 					<!-- Here goes the content of the firsr section-->
+					<br></br>
 					<h2>How we had fun</h2>
 					<hr>
 					<center><i class="glyphicon glyphicon-star"></i></center>
@@ -314,5 +324,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script>
 </body>
 </html>
