--- a/Web/index.html
+++ b/Web/index.html
@@ -124,7 +124,7 @@
 					<br>
 					In the last years many on-line music and audiovisual stores closed their virtual doors snatching users from their digital copies after buying them. After these kind of situations some consumers have come back to buying hard copies.
 					<br>
-					The shelf is a hadware solution that allows audiovisual hard-copy owners to actively interact with their audiovisual media but reducing this interaction to a pleasent gesture. Collectors and fans will enjoy the pleasure of selecting whatever title they want to play from their home libraries and actively playing it.
+					The shelf is a hardware solution that allows audiovisual hard-copy owners to actively interact with their audiovisual media but reducing this interaction to a pleasant gesture. Collectors and fans will enjoy the pleasure of selecting whatever title they want to play from their home libraries and actively playing it.
 					</p>
 					<p class="container-text"> Let's talk about business. The shelf is presented as an input device for your audiovisual home center that can be easily added to any shelf. Basically we do not sell the shelf, we sell the device that is added to the shelf. Consumers would buy the product and easily install it at home. 
 					</p>
@@ -315,7 +315,7 @@
 <!-- here starts the footer -->
 <footer class="footer">
 	<div class="row">
-		<p><i class="glyphicon glyphicon-knight"></i>&nbsp;<i class="glyphicon glyphicon-sunglasses"> -- This website was powered by the guys of Munich Maker Lab -- </i></p>
+		<p><i class="glyphicon glyphicon-knight"></i>&nbsp;<i class="glyphicon glyphicon-sunglasses"> -- This website was powered by the guys of <a href="https://munichmakerlab.de">Munich Maker Lab</a> -- </i></p>
 	</div>
 </footer>
 
