--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 					<hr>
 					<center><i class="glyphicon glyphicon-wrench"></i></center>
 					<br></br>
-					<p>The shelf uses a hidden RFID chip to interact with a embedded SOC, which posts the RFID tag to an MQTT broker running on the network. A cloud server subscribed to the appropriate MQTT topic then references the RFID tag against a database of media. If the desired media exists in the database, the server contacts the home entertainment system, running Kodi, using a series of JSON-RPC requests to modify three different media playlists: audio, video, and photos.</p>
-					
+					<p class="container-text">The shelf uses a hidden RFID chip to interact with a embedded SOC, which posts the RFID tag to an MQTT broker running on the network. A cloud server subscribed to the appropriate MQTT topic then references the RFID tag against a database of media. If the desired media exists in the database, the server contacts the home entertainment system, running Kodi, using a series of JSON-RPC requests to modify three different media playlists: audio, video, and photos.</p>
+					<center><img class="img-graph" src="img/graph.jpg"></img></center>
+					<br></br>
 				</div>
 			</div>
 		</div>
